@@ -28,6 +28,8 @@ lib/gamebox/data/music/GAMEBOX_MUSIC_GOES_HERE
 lib/gamebox/data/sounds/GAMEBOX_SOUND_FX_GO_HERE
 lib/gamebox/director.rb
 lib/gamebox/gamebox_application.rb
+lib/gamebox/gamebox_generator.rb
+lib/gamebox/generators/actor_generator.rb
 lib/gamebox/graphical.rb
 lib/gamebox/graphical_actor_view.rb
 lib/gamebox/inflections.rb
@@ -55,25 +57,29 @@ lib/gamebox/surface_ext.rb
 lib/gamebox/svg_actor.rb
 lib/gamebox/svg_document.rb
 lib/gamebox/tasks/gamebox_tasks.rb
-lib/gamebox/template_app/README
-lib/gamebox/template_app/Rakefile
-lib/gamebox/template_app/config/boot.rb
-lib/gamebox/template_app/config/environment.rb
-lib/gamebox/template_app/config/game.yml
-lib/gamebox/template_app/config/mode_level_config.yml
-lib/gamebox/template_app/config/objects.yml
-lib/gamebox/template_app/data/fonts/FONTS_GO_HERE
-lib/gamebox/template_app/data/graphics/GRAPHICS_GO_HERE
-lib/gamebox/template_app/data/music/MUSIC_GOES_HERE
-lib/gamebox/template_app/data/sounds/SOUND_FX_GO_HERE
-lib/gamebox/template_app/doc/README_FOR_APP
-lib/gamebox/template_app/lib/code_statistics.rb
-lib/gamebox/template_app/lib/diy.rb
-lib/gamebox/template_app/lib/platform.rb
-lib/gamebox/template_app/src/app.rb
-lib/gamebox/template_app/src/demo_level.rb
-lib/gamebox/template_app/src/game.rb
-lib/gamebox/template_app/src/my_actor.rb
+lib/gamebox/templates/actor.erb
+lib/gamebox/templates/template_app/README
+lib/gamebox/templates/template_app/Rakefile
+lib/gamebox/templates/template_app/config/boot.rb
+lib/gamebox/templates/template_app/config/environment.rb
+lib/gamebox/templates/template_app/config/game.yml
+lib/gamebox/templates/template_app/config/mode_level_config.yml
+lib/gamebox/templates/template_app/config/objects.yml
+lib/gamebox/templates/template_app/data/fonts/FONTS_GO_HERE
+lib/gamebox/templates/template_app/data/graphics/GRAPHICS_GO_HERE
+lib/gamebox/templates/template_app/data/music/MUSIC_GOES_HERE
+lib/gamebox/templates/template_app/data/sounds/SOUND_FX_GO_HERE
+lib/gamebox/templates/template_app/doc/README_FOR_APP
+lib/gamebox/templates/template_app/lib/code_statistics.rb
+lib/gamebox/templates/template_app/lib/diy.rb
+lib/gamebox/templates/template_app/lib/platform.rb
+lib/gamebox/templates/template_app/script/generate
+lib/gamebox/templates/template_app/src/app.rb
+lib/gamebox/templates/template_app/src/demo_level.rb
+lib/gamebox/templates/template_app/src/game.rb
+lib/gamebox/templates/template_app/src/my_actor.rb
+lib/gamebox/templates/template_app/test/helper.rb
+lib/gamebox/templates/test_actor.erb
 lib/gamebox/updatable.rb
 lib/gamebox/version.rb
 lib/gamebox/viewport.rb
