@@ -1,6 +1,5 @@
 $: << File.dirname(__FILE__)+"/gamebox"
 
-# TODO or I could include all my files here... ug
 GAMEBOX_PATH = File.join(File.dirname(__FILE__),"gamebox/")
 require 'gamebox_application'
 
