@@ -1,4 +1,3 @@
-require 'lib/rubygame/shared'
 require 'ftor'
 module Rubygame
 
