@@ -19,3 +19,10 @@ task :stats do
   CodeStatistics.new(*STATS_DIRECTORIES).to_s
 end
 
+require 'spec/rake/spectask'
+desc "Run all specs"
+Spec::Rake::SpecTask.new('specs') do |t|
+  t.spec_opts = ["-r", "./test/helper"]
+  t.spec_files = FileList['test//test_*.rb']
+end
+task :test => :specs
