@@ -1,0 +1,4 @@
+$LOAD_PATH.unshift File.expand_path(File.join(File.dirname(__FILE__), '..', 'config'))
+require 'spec'
+require 'environment'
+require 'metaclass'
