@@ -44,3 +44,5 @@
   * added rake debug to all gamebox games
   * added input_manager to levels
   * added usage -help to gamebox
+  * added ./script/generate to generate actors (ie ./script/generate actor Foo)
+  * migrated all test to use rspec
